# rnet

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
components/: Cargo.toml
components/src/: lib.rs  payloads.rs
components/src/entities/: character.rs
components/src/payloads/: error.rs  player.rs
rnet/: Cargo.toml
rnet/src/: err.rs  lib.rs  payloads.rs  rnet.rs  socket.rs
rnet/src/payloads/: pclient.rs  pserver.rs
rnet_payloads/: Cargo.toml
rnet_payloads/src/: data_types.rs  lib.rs  payloads.rs
rnet_payloads/src/data_types/: player.rs  skills.rs
rnet_payloads/src/payloads/: error.rs  pclient.rs  player.rs  pserver.rs
rnet_serde/: Cargo.toml
rnet_serde/src/: lib.rs  rnet_serde_wrapper.rs
rnet_serde_derive/: Cargo.toml
rnet_serde_derive/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
