[package]
name = "client"
version = "0.1.0"
authors = ["gpoblon <gpoblon@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# just remove ../ to split payloads for real tests
[dependencies]
async-std = "1.4.0"
rnet = { path = "../rnet" }
components = { path = "../components" }