[package]
name = "rnet"
version = "0.1.0"
authors = ["gpoblon"]
edition = "2018"

[lib]
name = "rnet"
path = "src/lib.rs"

[dependencies]
bincode = "1.2.1"
colored = "1.9.0"
async-std = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
rnet_serde = { path = "../rnet_serde", version = "0.1.0" }