[package]
name = "server"
version = "0.1.0"
authors = ["gpoblon <gpoblon@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnet = { path = "../rnet" }
async-std = "1.4.0"
components = { path = "../components" }